cluster/apps/nextcloud/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/component: fpm-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/component: fpm-nginx
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: ghcr.io/nginxinc/nginx-unprivileged:1.27.4
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.${BASE_DOMAIN}
            initialDelaySeconds: 10
            failureThreshold: 60
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.${BASE_DOMAIN}
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: cloud.${BASE_DOMAIN}
            failureThreshold: 3
            timeoutSeconds: 3
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
              readOnly: true
            - mountPath: /var/www/html
              name: app-data
              readOnly: true
            - mountPath: /var/www/html/data
              name: user-data
              readOnly: true
        - name: nextcloud
          image: nextcloud:35.0.1-fpm-alpine
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - crond
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: app-data
              mountPath: /var/www/html
            - name: user-data
              mountPath: /var/www/html/data
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: nextcloud-app-data
        - name: user-data
          persistentVolumeClaim:
            claimName: nextcloud-user-data
        - name: nginx-config
          configMap:
            name: nextcloud-nginx-config
