cluster/apps/nextcloud/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: cloud.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: http
